Clase 21: Formularios busqueda nuevos

--- a/src/coder/templates/coder/resultado_busqueda.html
+++ b/src/coder/templates/coder/resultado_busqueda.html
@@ -4,16 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Formulario de prueba</title>
+    <title>Document</title>
 </head>
 <body>
 
-    <form method="post">{% csrf_token %}
+    <h1>Resultados</h1>
 
-        {{ formulario.as_p }}
-
-        <input type="submit" value="Crear">
-    </form>
+    {% for curso in cursos %}
+        <p>{{curso.nombre}}</p>
+    {% endfor %}
     
 </body>
 </html>
